Development version
===================
- App has now a debug attribute, set when it is initialized with debug=True.

- Removed 3 configuration keys, which are now available as properties of the
  WSGI app instance:
  - dev: True is the app is using the dev server, False otherwise.
  - app_id: the application ID as defined in *app.yaml*.
  - version_id: the deployed version ID. Always '1' when using the dev server.

- Removed make_response(). It is unneeded magic that adds many ways to to the
  same basic thing: build a Response object. If you rely on automatic wrapping
  returned values from handlers into Response objects, you need to explicitly
  return a Response object now.

- Added a Router class which is responsible for matching, dispatching and
  building URLs. The main reason was to implement better exception handling,
  but it adds other flexibility points. Some implications:
  - Moved methods from Tipfy that are now part of the router functionality:
    get_url_map(), add_url_rule(), match_url(), pre_dispatch(), dispatch() and
    post_dispatch(). If you extended them in some way, you must now extend
    the router.
  - URL building is centralized in the router, so url_for() methods
    (from Request, RequestHandler or Tipfy) call router.build(). They remain
    backwards compatible, just the internals changed.

- New, easier and improved exception handling scheme:
  XXX explain it


Version 0.6.2 - August 20, 2010
===============================
- Added Tipfy.run(): run_wsgi_app(app) is now deprecated and calls app.run().


Version 0.6.1 - August 19, 2010
===============================
- RequestHandler instances are now callables. __call__() is used instead of
  dispatch(), which is now deprecated and just calls the instance.

- Added RequestHandler methods:
  - abort(), a wrapper for abort().
  - get_config(), a wrapper for Config.get_or_load().
  - handle_exception()
  - redirect().
  - redirect_to(): redirect() + url_for()
  - url_for():
